pushing fake favicon

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_PATH=. node ./server/bin/www",
+    "start": "node ./server/bin/www",
     "webpack": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
